--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "@fastify/cors": "^8.0.0",
     "@fastify/static": "^6.4.0",
-    "basic-ftp": "^4.6.6",
     "dotenv": "^16.0.1",
     "fastify": "^4.0.3",
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "ssh2-sftp-client": "^8.1.0"
   },
   "devDependencies": {
     "@types/node": "^18.0.0"
